--- a/page2.html
+++ b/page2.html
@@ -7,9 +7,10 @@
   <link rel="stylesheet" href="css/modules.css">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@700&display=swap" rel="stylesheet">
+
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script id="photo-template" type="text/x-tmpl-mustache">
-    
     <div class="{{keyword}}">
       <h2>{{title}}</h2>
       <img src="{{image}}" alt=""/>
@@ -23,18 +24,17 @@
 <body>
   <header>
     <h1>The Gallery of Horns</h1>
-    <a href="page2.html">Toggle Page</a>
+    <a href="index.html">Toggle Page</a>
     <select>
       <option value="default">Filter by Keyword</option>
     </select>
   </header>
   <main>
- 
   </main>
   <footer>
   </footer>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/4.0.1/mustache.min.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/app2.js"></script>
 </body>
 </html>
